# JeePointer

./: TODOs
JeeNode-Pointer/: JeeNode-Pointer.ino  gravity_demo.tcl
Stellarium-plugin/: AUTHORS  CMakeLists.txt  FindFTDI.cmake
Stellarium-plugin/src/: CMakeLists.txt  JeePointer.cpp  JeePointer.hpp  JeeScope.cpp  JeeScope.hpp
Test_client/: test.c  test.h
receiver/: receiver.ino
stellarium_plugin/: Makefile  test.c
tactor/: reader  tactor.ino
